@@ -26,26 +26,59 @@ import org.json4s.JsonDSL._
 import org.json4s.native.JsonMethods._
 import scala.util.{Success, Failure, Try}
 import us.jubat.jubaql_server.processor._
-import us.jubat.jubaql_server.processor.json.ClassifierResult
+import us.jubat.jubaql_server.processor.json.{ClassifierResult, AnomalyScore}
+import unfiltered.response._
+import unfiltered.util.RunnableServer
+import unfiltered.request._
 
 /** Tests the correct behavior as viewed from the outside.
   */
 trait ProcessorTestManager
   extends Suite
   with BeforeAndAfter
-  with BeforeAndAfterAll {
+  with BeforeAndAfterAll
+  with MockServer
+  with HasSpark {
 
   implicit val formats = org.json4s.DefaultFormats
+
+  val dummySessionID = "dummySessionID123456"
+  val dummyRegistrationKey = "dummyRegistrationKey"
+
+  //Mock JubaQL Gateway Server
+  protected val server: RunnableServer = {
+    unfiltered.netty.Server.http(9877).plan(
+      // define the server behavior
+      unfiltered.netty.cycle.Planify {
+        // return some result if a query is given with valid json
+        case req@POST(Path(Seg("registration" :: testRegistrationKey :: Nil))) =>
+          JsonBody(req) match {
+            case Some(bodyData) =>
+              println("response : " + bodyData)
+              val JString(action) = bodyData \ "action"
+              if (action == "register") {
+                val JInt(port) = bodyData \ "port"
+                serverPort = port.intValue()
+              }
+              Ok ~> ResponseString("DummyResponse")
+            case None =>
+              NotFound ~> ResponseString("Illegal Response")
+          }
+      })
+  }
 
   var process: Process = null
   var stdout: StringBuffer = null
   var sendJubaQL: String => Try[(Int, JValue)] = null
 
+  var serverPort:Int = -1
+
   before {
-    val startResult = startProcessor()
+    val startResult = startProcessor("-Djubaql.checkpointdir=file:///tmp/spark")
     process = startResult._1
     stdout = startResult._2
     sendJubaQL = startResult._3
+    serverPort = -1
   }
 
   after {
@@ -82,7 +115,7 @@ trait ProcessorTestManager
     while (now - start < waitMax && state != "Finished") {
       sendJubaQL("STATUS") match {
         case Success(x) =>
-          x._2 \ "sources" \ dsName match {
+          x._2 \ "sources" \ dsName \ "state" match {
             case JString(currentState) =>
               state = currentState
             case other =>
@@ -109,6 +142,31 @@ trait ProcessorTestManager
     (process, stdoutBuffer, sendJubaQLTo(port))
   }
 
+  protected def startProcessor(env: String): (Process,
+    StringBuffer, String => Try[(Int, JValue)]) = {
+    val command = Seq("./start-script/run")
+    val pb = commandToProcessBuilder(command, env)
+    val (logger, stdoutBuffer, stderrBuffer) = getProcessLogger()
+    val process = pb run logger
+    val port = getServerPort(stdoutBuffer)
+    (process, stdoutBuffer, sendJubaQLTo(port))
+  }
+
+  protected def startRealProcessor(env: String): (Process, StringBuffer, String => Try[(Int, JValue)]) = {
+    val command = Seq(s"${sparkPath}/bin/spark-submit",
+      "--class", "us.jubat.jubaql_server.processor.JubaQLProcessor",
+      "--name", s"JubaQLProcessor:localhost:9877:${dummySessionID}",
+      "--master", "yarn-cluster",
+      "--conf", s"spark.driver.extraJavaOptions=-Drun.mode=production -Djubaql.zookeeper=127.0.0.1:2181 -Djubaql.checkpointdir=hdfs:///tmp/spark -Djubaql.gateway.address=127.0.0.1:9877 -Djubaql.processor.sessionId=${dummySessionID} -XX:MaxPermSize=128m",
+      "target/scala-2.10/jubaql-processor-assembly-1.3.0.jar",
+      s"http://localhost:9877/registration/${dummyRegistrationKey}")
+    val pb = commandToProcessBuilder(command, env)
+    val (logger, stdoutBuffer, stderrBuffer) = getProcessLogger()
+    val process = pb run logger
+    val port = waitUntilResposeServerPort()
+    (process, stdoutBuffer, sendJubaQLTo(port))
+  }
+
   protected def getProcessLogger(): (ProcessLogger, StringBuffer, StringBuffer) = {
     val stdoutBuffer = new StringBuffer()
     val stderrBuffer = new StringBuffer()
@@ -126,7 +184,8 @@ trait ProcessorTestManager
   protected def getServerPort(stdout: StringBuffer): Int = {
     val portRe = "(?s).+listening on port ([0-9]+)\n".r
     var port = 0
-    while (port == 0) {
+    val start = System.currentTimeMillis()
+    while (port == 0 && System.currentTimeMillis < start + 60000) {
       stdout.toString match {
         case portRe(loggedPort) =>
           port = loggedPort.toInt
@@ -134,7 +193,22 @@ trait ProcessorTestManager
           Thread.sleep(100)
       }
     }
+    if (port == 0) {
+      println("Timeout get serverPort.\nstdout : ${stdout.toString}")
+      throw new Exception("Timeout get serverPort")
+    }
     port
+  }
+
+  protected def waitUntilResposeServerPort(): Int = {
+    val start = System.currentTimeMillis()
+    while (serverPort == -1 && System.currentTimeMillis < start + 60000) {
+      Thread.sleep(100)
+    }
+    if (serverPort == -1) {
+      throw new Exception("Timeout get serverPort")
+    }
+    serverPort
   }
 
   protected def sendJubaQLTo(port: Int)(stmt: String): Try[(Int, JValue)] = {
@@ -149,6 +223,30 @@ trait ProcessorTestManager
             parse(response.getResponseBody("UTF-8")))
         }
     }
+  }
+
+  case class StreamStatus(inputCount: Long, outputCount: Long, startTime: Long)
+
+  protected def getStreamStatus(streamStatusJValue: JValue): StreamStatus = {
+    val startTime = streamStatusJValue \ "stream_start" match {
+      case JInt(value) =>
+        value.toLong
+      case other =>
+        throw new Exception("failed json parse:" + other.toString)
+    }
+    val inputCount = streamStatusJValue \ "input_count" match {
+      case JInt(value) =>
+        value.toLong
+      case other =>
+        throw new Exception("failed json parse:" + other.toString)
+    }
+    val outputCount = streamStatusJValue \ "output_count" match {
+      case JInt(value) =>
+        value.toLong
+      case other =>
+        throw new Exception("failed json parse:" + other.toString)
+    }
+    StreamStatus(inputCount, outputCount, startTime)
   }
 }
 
@@ -266,6 +364,210 @@ class CreateModelSpec
     // wait until shutdown
     val exitValue = process.exitValue()
     exitValue shouldBe 0
+  }
+
+  "CREATE MODEL(Production Mode)" should "return HTTP 200 on correct syntax and application-name of the as expected" taggedAs (JubatusTest) in {
+    // override before() processing
+    if (process != null) process.destroy()
+    // start production-mode processor
+    val startResult = startProcessor("-Drun.mode=production -Djubaql.zookeeper=127.0.0.1:2181 -Djubaql.checkpointdir=file:///tmp/spark -Djubaql.gateway.address=testAddress:1234 -Djubaql.processor.sessionId=1234567890abcdeABCDE")
+    process = startResult._1
+    stdout = startResult._2
+    sendJubaQL = startResult._3
+
+    val cmResult = sendJubaQL(goodCmStmt)
+    cmResult shouldBe a[Success[_]]
+    cmResult.get._1 shouldBe 200
+    cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)")
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+
+    // check application-name
+    stdout.toString should include("starting JubatusOnYarn:testAddress:1234:1234567890abcdeABCDE:classifier:test1")
+  }
+
+  "CREATE MODEL(Production Mode) without SystemProperty" should "return HTTP 200 on correct syntax and application-name of the as expected" taggedAs (JubatusTest) in {
+
+    // override before() processing
+    if (process != null) process.destroy()
+    // start production-mode processor (without System Property)
+    val startResult = startProcessor("-Drun.mode=production -Djubaql.zookeeper=127.0.0.1:2181 -Djubaql.checkpointdir=file:///tmp/spark")
+    process = startResult._1
+    stdout = startResult._2
+    sendJubaQL = startResult._3
+
+    val cmResult = sendJubaQL(goodCmStmt)
+    cmResult shouldBe a[Success[_]]
+    cmResult.get._1 shouldBe 200
+    cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)")
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+
+    // check application-name
+    stdout.toString should include("starting JubatusOnYarn:::classifier:test1")
+  }
+
+  "CREATE MODEL(Development Mode) with log config" should "return HTTP 200 on correct syntax" taggedAs (JubatusTest) in {
+
+    val cmStmt = """CREATE CLASSIFIER MODEL test1 (label: label) AS * WITH id CONFIG '{"method": "AROW", "parameter": {"regularization_weight" : 1.0}}' LOG CONFIG '{"jubatus_server": "hdfs:///jubatus-on-yarn/test/js_log4j.xml"}'"""
+
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+    println(cmResult)
+    cmResult.get._1 shouldBe 200
+    cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)")
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+
+    println(stdout.toString)
+  }
+
+  "CREATE MODEL(Development Mode) with log config(specified yarn_am,jubatus_proxy)" should "return HTTP 200 on correct syntax with Warning Message" taggedAs (JubatusTest) in {
+
+    val cmStmt = """CREATE CLASSIFIER MODEL test1 (label: label) AS * WITH id CONFIG '{"method": "AROW", "parameter": {"regularization_weight" : 1.0}}' LOG CONFIG '{"yarn_am": "file:///tmp/test/am_log4j.xml", "jubatus_proxy": "hdfs:///jubatus-on-yarn/test/jp_log4j.xml"}'"""
+
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+    cmResult.get._1 shouldBe 200
+    cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)\n - LOG CONFIG(yarn_am) setting has been ignored in Development mode\n - LOG CONFIG(jubatus_proxy) setting has been ignored in Development mode")
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+
+    println(stdout.toString)
+  }
+
+  "CREATE MODEL(Production Mode) with CONFIG FILE" should "return HTTP 200 on correct syntax and check Status Output" taggedAs (JubatusTest) in {
+    // override before() processing
+    if (process != null) process.destroy()
+    // start production-mode processor
+    try {
+      val startResult = startRealProcessor("")
+
+      process = startResult._1
+      stdout = startResult._2
+      sendJubaQL = startResult._3
+
+      val currentDir = new java.io.File(".").getCanonicalPath
+      val cmStmt = s"""CREATE CLASSIFIER MODEL test1 (label: label) AS * WITH id CONFIG FILE 'file://${currentDir}/src/test/resources/config.json' RESOURCE CONFIG FILE 'file://${currentDir}/src/test/resources/resourceConfig.json' LOG CONFIG FILE 'file://${currentDir}/src/test/resources/logConfig.json' SERVER CONFIG FILE 'file://${currentDir}/src/test/resources/serverConfig.json' PROXY CONFIG FILE 'file://${currentDir}/src/test/resources/proxyConfig.json'"""
+
+      val cmResult = sendJubaQL(cmStmt)
+      cmResult shouldBe a[Success[_]]
+      cmResult.get._1 shouldBe 200
+      cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)")
+
+      var stResult: Try[(Int, JValue)] = null
+      //yarnアプリケーション(jubatus_server)の起動待ち
+      val start = System.currentTimeMillis()
+      while (stResult == null && System.currentTimeMillis() < start + 300000) {
+        val result = sendJubaQL("STATUS")
+        println("--- models --- \n" + result.get._2 \ "models")
+        println("--- test1 --- \n" + result.get._2 \ "models" \ "test1")
+        result.get._2 \ "models" \ "test1" match {
+          case models: JObject =>
+            models \ "config" match {
+              case value: JObject =>
+                stResult = result
+              case other => // ignore
+            }
+          case _ =>
+          //ignore
+        }
+        Thread.sleep(3000)
+      }
+      if (stResult == null) {
+        throw new Exception("Failed to get Config\n")
+      }
+      stResult shouldBe a[Success[_]]
+      val configResult = stResult.get._2 \ "models" \ "test1" \ "config"
+      configResult \ "jubatusConfig" shouldBe JString(s"""file://${currentDir}/src/test/resources/config.json""")
+      configResult \ "resourceConfig" shouldBe JString(s"""file://${currentDir}/src/test/resources/resourceConfig.json""")
+      configResult \ "logConfig" shouldBe JString(s"""file://${currentDir}/src/test/resources/logConfig.json""")
+      configResult \ "proxyConfig" shouldBe JString(s"""file://${currentDir}/src/test/resources/proxyConfig.json""")
+      configResult \ "serverConfig" shouldBe JString(s"""file://${currentDir}/src/test/resources/serverConfig.json""")
+      // shut down
+      val sdResult = sendJubaQL("SHUTDOWN")
+      sdResult shouldBe a[Success[_]]
+      // wait until shutdown
+      val exitValue = process.exitValue()
+      exitValue shouldBe 0
+    } finally {
+      process.destroy()
+    }
+  }
+
+  "CREATE MODEL(Production Mode) with CONFIG String" should "return HTTP 200 on correct syntax and check Status Output" taggedAs (JubatusTest) in {
+    // override before() processing
+    if (process != null) process.destroy()
+    // start production-mode processor
+    try {
+      val startResult = startRealProcessor("")
+
+      process = startResult._1
+      stdout = startResult._2
+      sendJubaQL = startResult._3
+
+      val currentDir = new java.io.File(".").getCanonicalPath
+      val cmStmt = s"""CREATE CLASSIFIER MODEL test1 (label: label) AS * WITH id CONFIG '{"method": "AROW", "parameter": {"regularization_weight" : 1.0}}' RESOURCE CONFIG '{"applicationmaster_memory": 256}' LOG CONFIG '{"yarn_am": "hdfs:///jubatus-on-yarn/test/am_log4j.xml"}' SERVER CONFIG '{"thread": 3}' PROXY CONFIG '{"thread": 2}'"""
+
+      val cmResult = sendJubaQL(cmStmt)
+      cmResult shouldBe a[Success[_]]
+      cmResult.get._1 shouldBe 200
+      cmResult.get._2 \ "result" shouldBe JString("CREATE MODEL (started)")
+
+      var stResult: Try[(Int, JValue)] = null
+      //yarnアプリケーション(jubatus_server)の起動待ち
+      val start = System.currentTimeMillis()
+      while (stResult == null && System.currentTimeMillis() < start + 300000) {
+        val result = sendJubaQL("STATUS")
+        println("--- models --- \n" + result.get._2 \ "models")
+        println("--- test1 --- \n" + result.get._2 \ "models" \ "test1")
+        result.get._2 \ "models" \ "test1" match {
+          case models: JObject =>
+            models \ "config" match {
+              case value: JObject =>
+                stResult = result
+              case other => // ignore
+            }
+          case _ =>
+          //ignore
+        }
+        Thread.sleep(3000)
+      }
+      if (stResult == null) {
+        throw new Exception("Failed to get Config\n")
+      }
+      stResult shouldBe a[Success[_]]
+      val configResult = stResult.get._2 \ "models" \ "test1" \ "config"
+      configResult \ "jubatusConfig" shouldBe JString(s"""{"method": "AROW", "parameter": {"regularization_weight" : 1.0}}""")
+      configResult \ "resourceConfig" shouldBe JString(s"""{"applicationmaster_memory": 256}""")
+      configResult \ "logConfig" shouldBe JString(s"""{"yarn_am": "hdfs:///jubatus-on-yarn/test/am_log4j.xml"}""")
+      configResult \ "serverConfig" shouldBe JString(s"""{"thread": 3}""")
+      configResult \ "proxyConfig" shouldBe JString(s"""{"thread": 2}""")
+      // shut down
+      val sdResult = sendJubaQL("SHUTDOWN")
+      sdResult shouldBe a[Success[_]]
+      // wait until shutdown
+      val exitValue = process.exitValue()
+      exitValue shouldBe 0
+    } finally {
+      process.destroy()
+    }
   }
 }
 
@@ -524,6 +826,159 @@ class CreateStreamFromSelectSpec
     // wait until shutdown
     val exitValue = process.exitValue()
     exitValue shouldBe 0
+  }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from datasource" taggedAs (LocalTest) in {
+    val cdResult = sendJubaQL(goodCdStmt)
+    cdResult shouldBe a[Success[_]]
+    val csResult = sendJubaQL("""CREATE STREAM test FROM SELECT label FROM ds1 WHERE label = '徳川'""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "test"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    val sp1Result = sendJubaQL("START PROCESSING ds1")
+    sp1Result shouldBe a[Success[_]]
+    sp1Result.get._1 shouldBe 200
+    sp1Result.get._2 \ "result" shouldBe JString("START PROCESSING")
+    waitUntilDone("ds1", 6000)
+
+    // get status(startTime)
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "test"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 44L
+    result.outputCount shouldBe 14L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from stream" taggedAs (LocalTest) in {
+    val cdResult = sendJubaQL(goodCdStmt)
+    cdResult shouldBe a[Success[_]]
+    val cs1Result = sendJubaQL("""CREATE STREAM ds2 FROM SELECT label, name FROM ds1 WHERE label = '徳川'""")
+    cs1Result shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM test FROM SELECT label, name FROM ds2 WHERE name like '家%'""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "test"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    val sp1Result = sendJubaQL("START PROCESSING ds1")
+    sp1Result shouldBe a[Success[_]]
+    sp1Result.get._1 shouldBe 200
+    sp1Result.get._2 \ "result" shouldBe JString("START PROCESSING")
+    waitUntilDone("ds1", 6000)
+
+    // get status(startTime)
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "test"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 14L
+    result.outputCount shouldBe 11L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
+
+  it should "Interference confirmation of StreamStatus values" taggedAs (LocalTest) in {
+    val cdResult = sendJubaQL(goodCdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val cs1Result = sendJubaQL("""CREATE STREAM ds2 FROM SELECT label, name FROM ds1 WHERE label = '徳川'""")
+    cs1Result shouldBe a[Success[_]]
+
+    val csResult1 = sendJubaQL("""CREATE STREAM test FROM SELECT label, name FROM ds2 WHERE name like '家%'""")
+    csResult1 shouldBe a[Success[_]]
+    csResult1.get._1 shouldBe 200
+    csResult1.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val csResult2 = sendJubaQL("""CREATE STREAM test2 FROM SELECT label, name FROM ds1 WHERE label = '北条'""")
+    csResult2 shouldBe a[Success[_]]
+    csResult2.get._1 shouldBe 200
+    csResult2.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    val sp1Result = sendJubaQL("START PROCESSING ds1")
+    sp1Result shouldBe a[Success[_]]
+    sp1Result.get._1 shouldBe 200
+    sp1Result.get._2 \ "result" shouldBe JString("START PROCESSING")
+    waitUntilDone("ds1", 6000)
+
+    // get status(startTime)
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus1 = stResult.get._2 \ "streams" \ "test"
+    val streamStatus2 = stResult.get._2 \ "streams" \ "test2"
+
+    val result1 = getStreamStatus(streamStatus1)
+    result1.inputCount shouldBe 14L
+    result1.outputCount shouldBe 11L
+    result1.startTime should be > beforeStartTime
+
+    val result2 = getStreamStatus(streamStatus2)
+    result2.inputCount shouldBe 44L
+    result2.outputCount shouldBe 15L
+    result2.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatus1の目視確認用デバッグ出力
+    println(streamStatus1)
+    // streamStatus2の目視確認用デバッグ出力
+    println(streamStatus2)
   }
 }
 
@@ -1025,6 +1480,108 @@ class CreateStreamFromSlidingWindowSpec
     val outputString = correctValues.map(l => l._1 + " | " + l._2).mkString("\n")
     stdout.toString should include(headerRow + "\n" + outputString)
   }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from datasource" taggedAs (LocalTest) in {
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csStmt = """CREATE STREAM ds2 FROM SLIDING WINDOW (SIZE 4 ADVANCE 1 TUPLES) """ +
+      """OVER ds1 WITH avg(age) AS avg_age, maxelem(gender)"""
+    val csResult = sendJubaQL(csStmt)
+    csResult shouldBe a[Success[_]]
+    if (csResult.get._1 != 200)
+      println(stdout.toString)
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "ds2"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    sendJubaQL("START PROCESSING ds1") shouldBe a[Success[_]]
+    waitUntilDone("ds1", 30000)
+
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "ds2"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 12L
+    result.outputCount shouldBe 8L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from stream" taggedAs (LocalTest) in {
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val cs1Result = sendJubaQL("CREATE STREAM stream1 FROM SELECT gender, age, jubaql_timestamp FROM ds1 WHERE age > 20")
+    cs1Result shouldBe a[Success[_]]
+    cs1Result.get._1 shouldBe 200
+
+    val csStmt = """CREATE STREAM ds2 FROM SLIDING WINDOW (SIZE 4 ADVANCE 1 TUPLES) """ +
+      """OVER stream1 WITH avg(age) AS avg_age, maxelem(gender)"""
+    val csResult = sendJubaQL(csStmt)
+    csResult shouldBe a[Success[_]]
+    if (csResult.get._1 != 200)
+      println(stdout.toString)
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "ds2"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    sendJubaQL("START PROCESSING ds1") shouldBe a[Success[_]]
+    waitUntilDone("ds1", 30000)
+
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "ds2"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 10L
+    result.outputCount shouldBe 6L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
 }
 
 
@@ -1174,6 +1731,65 @@ class CreateStreamFromAnalyzeSpec
     exitValue shouldBe 0
   }
 
+  it should "work correctly with CLASSIFIER and use error function" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(label string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (label == '徳川') {
+        |  return label + "ABC";
+        |} else {
+        |  throw new Error("Error Message");
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csfsStmt = """CREATE STREAM ds2 FROM SELECT addABC(label) AS lable, name FROM ds"""
+    val csfsResult = sendJubaQL(csfsStmt)
+    csfsResult shouldBe a[Success[_]]
+
+    val csfaStmt = """CREATE STREAM output FROM ANALYZE ds2 BY MODEL test USING classify AS newcol"""
+    val csfaResult = sendJubaQL(csfaStmt)
+    csfaResult shouldBe a[Success[_]]
+
+    // executed before UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING train FROM ds"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    // executed after UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 30000)
+    // before the first update:
+    stdout.toString should include("徳川ABC | 家康 | List()")
+    // after the first update:
+    stdout.toString should include regex("徳川ABC \\| 家康 \\| .*徳川,0.93333333")
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
   it should "work correctly with ANOMALY" taggedAs (LocalTest, JubatusTest) in {
     val cmStmt = """CREATE DATASOURCE ds (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
     val cmResult = sendJubaQL(cmStmt)
@@ -1214,15 +1830,72 @@ class CreateStreamFromAnalyzeSpec
     exitValue shouldBe 0
   }
 
-  it should "work correctly with RECOMMENDER/from_id" taggedAs (LocalTest, JubatusTest) in {
-    val cmStmt = """CREATE DATASOURCE ds FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
+  it should "work correctly with ANOMALY and use error function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(label string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (label == '徳川') {
+        |  return label + "ABC";
+        |} else {
+        |  throw new Error("Error Message");
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cdStmt = """CREATE DATASOURCE ds (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/lof.json").getLines().mkString("")
+    val cmStmt = s"""CREATE ANOMALY MODEL test AS name WITH unigram CONFIG '$config'"""
     val cmResult = sendJubaQL(cmStmt)
     cmResult shouldBe a[Success[_]]
 
-    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
-    val cdStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val csfsStmt = """CREATE STREAM ds2 FROM SELECT addABC(label) AS lable, name FROM ds"""
+    val csfsResult = sendJubaQL(csfsStmt)
+    csfsResult shouldBe a[Success[_]]
+
+    val csfaStmt = """CREATE STREAM output FROM ANALYZE ds2 BY MODEL test USING calc_score AS newcol"""
+    val csfaResult = sendJubaQL(csfaStmt)
+    csfaResult shouldBe a[Success[_]]
+
+    // executed before UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING add FROM ds"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    // executed after UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 30000)
+    // before the first update:
+    stdout.toString should include("徳川ABC | 家康 | 1.0")
+    // after the first update:
+    stdout.toString should include("徳川ABC | 家康 | 0.9990")
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "work correctly with RECOMMENDER/from_id" taggedAs (LocalTest, JubatusTest) in {
+    val cdStmt = """CREATE DATASOURCE ds FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
     val cdResult = sendJubaQL(cdStmt)
     cdResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
+    val cmStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
 
     val csfaStmt = """CREATE STREAM output FROM ANALYZE ds BY MODEL test USING complete_row_from_id AS newcol"""
     val csfaResult = sendJubaQL(csfaStmt)
@@ -1240,11 +1913,68 @@ class CreateStreamFromAnalyzeSpec
 
     val spResult = sendJubaQL("START PROCESSING ds")
     spResult shouldBe a[Success[_]]
-    waitUntilDone("ds", 6000)
+    waitUntilDone("ds", 30000)
     // before the first update:
     stdout.toString should include regex("長野久義 .+Map\\(\\),Map\\(\\)")
     // after the first update:
     stdout.toString should include regex("長野久義 .+Map\\(\\),Map\\(.*OPS -> 0.6804.*\\)")
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "work correctly with RECOMMENDER/from_id and use error function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(team string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (team == '巨人') {
+        |  return team + "ABC";
+        |} else {
+        |  throw new Error("Error Message");
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cdStmt = """CREATE DATASOURCE ds (id string, team string, 打率 numeric, 試合数 numeric, 打席 numeric, 打数 numeric, 安打 numeric, 本塁打 numeric, 打点 numeric, 盗塁 numeric, 四球 numeric, 死球 numeric, 三振 numeric, 犠打 numeric, 併殺打 numeric, 長打率 numeric, 出塁率 numeric, OPS numeric, RC27 numeric, XR27 numeric) FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
+    val cmStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val csfsStmt = """CREATE STREAM ds2 FROM SELECT id, addABC(team) AS team, 打率, 試合数, 打席, 打数, 安打, 本塁打, 打点, 盗塁, 四球, 死球, 三振, 犠打, 併殺打, 長打率, 出塁率, OPS, RC27, XR27 FROM ds"""
+    val csfsResult = sendJubaQL(csfsStmt)
+    csfsResult shouldBe a[Success[_]]
+
+    val csfaStmt = """CREATE STREAM output FROM ANALYZE ds2 BY MODEL test USING complete_row_from_id AS newcol"""
+    val csfaResult = sendJubaQL(csfaStmt)
+    csfaResult shouldBe a[Success[_]]
+
+    // executed before UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING update_row FROM ds"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    // executed after UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 30000)
+    // before the first update:
+    stdout.toString should include regex("長野久義 \\| 巨人ABC .+Map\\(\\),Map\\(\\)")
+    // after the first update:
+    stdout.toString should include regex("長野久義 \\| 巨人ABC .+Map\\(\\),Map\\(.*OPS -> 0.6804.*\\)")
 
     // shut down
     val sdResult = sendJubaQL("SHUTDOWN")
@@ -1280,11 +2010,68 @@ class CreateStreamFromAnalyzeSpec
 
     val spResult = sendJubaQL("START PROCESSING ds")
     spResult shouldBe a[Success[_]]
-    waitUntilDone("ds", 6000)
+    waitUntilDone("ds", 30000)
     // before the first update:
     stdout.toString should include regex("長野久義 .+Map\\(\\),Map\\(\\)")
     // after the first update:
     stdout.toString should include regex("長野久義 .+Map\\(\\),Map\\(.*OPS -> 0.6804.*\\)")
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "work correctly with RECOMMENDER/from_data and use error function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(name string, team string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (team == '巨人') {
+        |  return name + "ABC";
+        |} else {
+        |  throw new Error("Error Message");
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds (id string, team string, 打率 numeric, 試合数 numeric, 打席 numeric, 打数 numeric, 安打 numeric, 本塁打 numeric, 打点 numeric, 盗塁 numeric, 四球 numeric, 死球 numeric, 三振 numeric, 犠打 numeric, 併殺打 numeric, 長打率 numeric, 出塁率 numeric, OPS numeric, RC27 numeric, XR27 numeric) FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
+    val cdStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val aStmt1 = """CREATE STREAM ds2 FROM SELECT addABC(id, team) AS id, team, 打率, 試合数, 打席, 打数, 安打, 本塁打, 打点, 盗塁, 四球, 死球, 三振, 犠打, 併殺打, 長打率, 出塁率, OPS, RC27, XR27 FROM ds"""
+    val aResult1 = sendJubaQL(aStmt1)
+    aResult1 shouldBe a[Success[_]]
+
+    val aStmt2 = """CREATE STREAM output FROM ANALYZE ds2 BY MODEL test USING complete_row_from_datum AS newcol"""
+    val aResult2 = sendJubaQL(aStmt2)
+    aResult2 shouldBe a[Success[_]]
+
+    // executed before UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING update_row FROM ds"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    // executed after UPDATE
+    sendJubaQL("LOG STREAM output") shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 30000)
+    // before the first update:
+    stdout.toString should include regex("長野久義ABC .+Map\\(\\),Map\\(\\)")
+    // after the first update:
+    stdout.toString should include regex("長野久義ABC .+Map\\(\\),Map\\(.*OPS -> .*\\)")
 
     // shut down
     val sdResult = sendJubaQL("SHUTDOWN")
@@ -1403,6 +2190,124 @@ class CreateStreamFromAnalyzeSpec
     val exitValue = process.exitValue()
     exitValue shouldBe 0
   }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from datasource with CLASSIFIER" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cmStmt = """CREATE DATASOURCE ds (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csfaStmt = """CREATE STREAM output FROM ANALYZE ds BY MODEL test USING classify AS newcol"""
+    val csfaResult = sendJubaQL(csfaStmt)
+    csfaResult shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING train FROM ds"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "output"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 6000)
+
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "output"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 44L
+    result.outputCount shouldBe 44L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
+
+  it should "StreamStatus(starTime/outputCount/inputCount) from stream with CLASSIFIER" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cmStmt = """CREATE DATASOURCE ds (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val csStmt = """CREATE STREAM stream1 FROM SELECT * FROM ds WHERE label = '徳川'"""
+    val csResult = sendJubaQL(csStmt)
+    csResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csfaStmt = """CREATE STREAM output FROM ANALYZE stream1 BY MODEL test USING classify AS newcol"""
+    val csfaResult = sendJubaQL(csfaStmt)
+    csfaResult shouldBe a[Success[_]]
+
+    val umStmt = """UPDATE MODEL test USING train FROM stream1"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val beforeStartTime = System.currentTimeMillis()
+
+    //before start
+    val stBefore = sendJubaQL("STATUS")
+    stBefore shouldBe a[Success[_]]
+    stBefore.get._1 shouldBe 200
+    val beforeStreamStatus = stBefore.get._2 \ "streams" \ "output"
+
+    val before = getStreamStatus(beforeStreamStatus)
+    before.inputCount shouldBe 0L
+    before.outputCount shouldBe 0L
+    before.startTime shouldBe 0L
+
+    val spResult = sendJubaQL("START PROCESSING ds")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds", 6000)
+
+    val stResult = sendJubaQL("STATUS")
+    stResult shouldBe a[Success[_]]
+    stResult.get._1 shouldBe 200
+    val streamStatus = stResult.get._2 \ "streams" \ "output"
+
+    val result = getStreamStatus(streamStatus)
+    result.inputCount shouldBe 14L
+    result.outputCount shouldBe 14L
+    result.startTime should be > beforeStartTime
+
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+    // streamStatusの目視確認用デバッグ出力
+    println(streamStatus)
+  }
 }
 
 class UpdateModelSpec
@@ -1493,10 +2398,11 @@ class UpdateModelSpec
     waitUntilDone("ds", 6000)
 
     stdout.toString should include("column named 'doesnotexist' not found")
-    stdout.toString should
-      include("HybridProcessor - Error while waiting for static processing end") // we log once
-    stdout.toString should
-      include("HybridProcessor - Error while setting up stream processing") // ... and again
+// エラー終了しないように改修したため、以下の判定は削除
+//    stdout.toString should
+//      include("HybridProcessor - Error while waiting for static processing end") // we log once
+//    stdout.toString should
+//      include("HybridProcessor - Error while setting up stream processing") // ... and again
 
     // shut down
     val sdResult = sendJubaQL("SHUTDOWN")
@@ -2974,6 +3880,517 @@ class CreateFunctionSpec
         scores("北条北条北条ABC") shouldBe 0.0
       case None =>
         fail("Failed to parse returned content as a classifier result")
+    }
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "make callable a throw error function which takes a string argument" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return arg + "ABC";
+        |} else {
+        |  throw new Error('error Message');
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT addABC(label) AS label, name FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING train FROM ds2"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    // analyze
+    val aStmt = """ANALYZE '{"name": "慶喜"}' BY MODEL test USING classify"""
+    val aResult = sendJubaQL(aStmt)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    (aResult.get._2 \ "result").extractOpt[ClassifierResult] match {
+      case Some(pred) =>
+        val scores = pred.predictions.map(res => (res.label, res.score)).toMap
+        // the order of entries differs per machine/OS, so we use this
+        // slightly complicated way of checking equality
+        scores.keys.size shouldBe 1
+        scores.keys.toList should contain only("徳川ABC")
+        Math.abs(scores("徳川ABC") - 0.07692306488752365) should be < 0.00001
+      case None =>
+        fail("Failed to parse returned content as a classifier result")
+    }
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "make callable a throw error function which takes two string argument returns numeric" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string, arg2 numeric) RETURNS string LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return arg + "ABC : " + arg2;
+        |} else {
+        |  throw new Error('error Message');
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cfResultNum = sendJubaQL(
+      """CREATE FUNCTION getLength(arg string) RETURNS numeric LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return parseFloat(arg.length);
+        |} else {
+        |  throw new Error('error Message');
+        |}
+        |$$
+      """.stripMargin)
+    cfResultNum shouldBe a[Success[_]]
+    cfResultNum.get._1 shouldBe 200
+    cfResultNum.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT label, getLength(label) AS labelLength, name FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val csResult2 = sendJubaQL("""CREATE STREAM ds3 FROM SELECT addABC(label, labelLength) AS label, name FROM ds2""")
+    csResult2 shouldBe a[Success[_]]
+    csResult2.get._1 shouldBe 200
+    csResult2.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING train FROM ds3"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    // analyze
+    val aStmt = """ANALYZE '{"name": "慶喜"}' BY MODEL test USING classify"""
+    val aResult = sendJubaQL(aStmt)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    (aResult.get._2 \ "result").extractOpt[ClassifierResult] match {
+      case Some(pred) =>
+        val scores = pred.predictions.map(res => (res.label, res.score)).toMap
+        // the order of entries differs per machine/OS, so we use this
+        // slightly complicated way of checking equality
+        scores.keys.size shouldBe 1
+        scores.keys.toList should contain only("徳川ABC : 2")
+        Math.abs(scores("徳川ABC : 2") - 0.07692306488752365) should be < 0.00001
+      case None =>
+        fail("Failed to parse returned content as a classifier result")
+    }
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "make callable a throw error function which takes two string argument returns boolean" taggedAs (LocalTest, JubatusTest) in {
+    implicit val formats = DefaultFormats
+
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string, arg2 boolean) RETURNS string LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return arg + "ABC : " + arg2;
+        |} else {
+        |  throw new Error('error Message');
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cfResultNum = sendJubaQL(
+      """CREATE FUNCTION isTokugawa(arg string) RETURNS boolean LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return true;
+        |} else {
+        |  throw new Error('error Message');
+        |}
+        |$$
+      """.stripMargin)
+    cfResultNum shouldBe a[Success[_]]
+    cfResultNum.get._1 shouldBe 200
+    cfResultNum.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/shogun.json").getLines().mkString("")
+    val cdStmt = s"""CREATE CLASSIFIER MODEL test (label: label) AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT label, isTokugawa(label) AS tokugawa, name FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val csResult2 = sendJubaQL("""CREATE STREAM ds3 FROM SELECT addABC(label, tokugawa) AS label, name FROM ds2""")
+    csResult2 shouldBe a[Success[_]]
+    csResult2.get._1 shouldBe 200
+    csResult2.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING train FROM ds3"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    // analyze
+    val aStmt = """ANALYZE '{"name": "慶喜"}' BY MODEL test USING classify"""
+    val aResult = sendJubaQL(aStmt)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    (aResult.get._2 \ "result").extractOpt[ClassifierResult] match {
+      case Some(pred) =>
+        val scores = pred.predictions.map(res => (res.label, res.score)).toMap
+        // the order of entries differs per machine/OS, so we use this
+        // slightly complicated way of checking equality
+        scores.keys.size shouldBe 1
+        scores.keys.toList should contain only("徳川ABC : true")
+        Math.abs(scores("徳川ABC : true") - 0.07692306488752365) should be < 0.00001
+      case None =>
+        fail("Failed to parse returned content as a classifier result")
+    }
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "work correctly with ANOMALY use function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string) RETURNS string LANGUAGE JavaScript AS $$
+        |return arg + "ABC";
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_1.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/lof.json").getLines().mkString("")
+    val cdStmt = s"""CREATE ANOMALY MODEL test AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT label, addABC(name) AS name FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING add FROM ds2"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    val aStmt =  """ANALYZE '{"label": "徳川","name": "家康ABC"}' BY MODEL test USING calc_score"""
+    val aResult = sendJubaQL(aStmt)
+    val aStmt2 = """ANALYZE '{"label": "徳川","name": "ABC"}' BY MODEL test USING calc_score"""
+    val aResult2 = sendJubaQL(aStmt2)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    (aResult.get._2 \ "result").extractOpt[AnomalyScore] match {
+      case Some(scoreRes) =>
+        val scores = scoreRes.score
+        // the order of entries differs per machine/OS, so we use this
+        // slightly complicated way of checking equality
+        scores shouldBe 1.0F
+      case None =>
+        fail("Failed to parse returned content as a calc_score result")
+    }
+    // now check the result
+
+    // TODO 結果がInfinityのため、レスポンスはパースエラーとなる
+    aResult2 shouldBe a[Failure[_]]
+
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "work correctly with ANOMALY use error function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (arg == '徳川') {
+        |  return arg + "ABC";
+        |} else {
+        |  throw new Error('error Message');
+        |}$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (label string, name string) FROM (STORAGE: "file://src/test/resources/shogun_2.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/lof.json").getLines().mkString("")
+    val cdStmt = s"""CREATE ANOMALY MODEL test AS name WITH unigram CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT addABC(label) AS label, name FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING add FROM ds2"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    val aStmt =  """ANALYZE '{"label": "徳川ABC","name": "家康"}' BY MODEL test USING calc_score"""
+    val aResult = sendJubaQL(aStmt)
+
+    val aStmt2 = """ANALYZE '{"label": "足利","name": "義満"}' BY MODEL test USING calc_score"""
+    val aResult2 = sendJubaQL(aStmt2)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    (aResult.get._2 \ "result").extractOpt[AnomalyScore] match {
+      case Some(scoreRes) =>
+        val scores = scoreRes.score
+        // the order of entries differs per machine/OS, so we use this
+        // slightly complicated way of checking equality
+        scores shouldBe 1.0F
+      case None =>
+        fail("Failed to parse returned content as a calc_score result")
+    }
+    // now check the result
+
+    // TODO 結果がInfinityのため、レスポンスはパースエラーとなる
+    aResult2 shouldBe a[Failure[_]]
+
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "recommender use function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(arg string) RETURNS string LANGUAGE JavaScript AS $$
+        |return arg + "ABC";
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (id string, team string, 打率 numeric, 試合数 numeric, 打席 numeric, 打数 numeric, 安打 numeric, 本塁打 numeric, 打点 numeric, 盗塁 numeric, 四球 numeric, 死球 numeric, 三振 numeric, 犠 打 numeric, 併殺打 numeric, 長打率 numeric, 出塁率 numeric, OPS numeric, RC27 numeric, XR27 numeric) FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
+    val cdStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT addABC(id) AS id, team, 打率, 試合数, 打席, 打数, 安打, 本塁打, 打点, 盗塁, 四球, 死球, 三振, 犠打, 併殺打, 長打率, 出塁率, OPS, RC27, XR27 FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING update_row FROM ds2"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    val aStmt =  """ANALYZE '荻野貴司ABC' BY MODEL test USING complete_row_from_id"""
+    val aResult = sendJubaQL(aStmt)
+    val aStmt2 =  """ANALYZE '荻野貴司' BY MODEL test USING complete_row_from_id"""
+    val aResult2 = sendJubaQL(aStmt2)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    aResult.get._2 \ "result" \ "num_values" match {
+      case JObject(list) =>
+        val vals = list.collect({
+          case (s, JDouble(j)) => (s, j)
+        }).toMap
+        vals.size shouldBe 18
+      case _ =>
+        fail("there was no 'num_values' key")
+    }
+    aResult2 shouldBe a[Success[_]]
+    if (aResult2.get._1 != 200)
+      println(stdout.toString)
+    aResult2.get._1 shouldBe 200
+    aResult2.get._2 \ "result" \ "num_values" match {
+      case JObject(list) =>
+        val vals = list.collect({
+          case (s, JDouble(j)) => (s, j)
+        }).toMap
+
+        vals.size shouldBe 0
+      case _ =>
+        fail("there was no 'num_values' key")
+    }
+    // wait until shutdown
+    val exitValue = process.exitValue()
+    exitValue shouldBe 0
+  }
+
+  it should "recommender use error function" taggedAs (LocalTest, JubatusTest) in {
+    val cfResult = sendJubaQL(
+      """CREATE FUNCTION addABC(name string, team string) RETURNS string LANGUAGE JavaScript AS $$
+        |if (team == '巨人') {
+        |  return name + "ABC";
+        |} else {
+        |  throw new Error("Error Message");
+        |}
+        |$$
+      """.stripMargin)
+    cfResult shouldBe a[Success[_]]
+    cfResult.get._1 shouldBe 200
+    cfResult.get._2 \ "result" shouldBe JString("CREATE FUNCTION")
+
+    val cmStmt = """CREATE DATASOURCE ds1 (id string, team string, 打率 numeric, 試合数 numeric, 打席 numeric, 打数 numeric, 安打 numeric, 本塁打 numeric, 打点 numeric, 盗塁 numeric, 四球 numeric, 死球 numeric, 三振 numeric, 犠 打 numeric, 併殺打 numeric, 長打率 numeric, 出塁率 numeric, OPS numeric, RC27 numeric, XR27 numeric) FROM (STORAGE: "file://src/test/resources/npb_similar_player_data.json")"""
+    val cmResult = sendJubaQL(cmStmt)
+    cmResult shouldBe a[Success[_]]
+
+    val config = Source.fromFile("src/test/resources/npb_similar_player.json").getLines().mkString("")
+    val cdStmt = s"""CREATE RECOMMENDER MODEL test (id: id) AS team WITH unigram, * WITH id CONFIG '$config'"""
+    val cdResult = sendJubaQL(cdStmt)
+    cdResult shouldBe a[Success[_]]
+
+    val csResult = sendJubaQL("""CREATE STREAM ds2 FROM SELECT addABC(id, team) AS id, team, 打率, 試合数, 打席, 打数, 安打, 本塁打, 打点, 盗塁, 四球, 死球, 三振, 犠打, 併殺打, 長打率, 出塁率, OPS, RC27, XR27 FROM ds1""")
+    csResult shouldBe a[Success[_]]
+    csResult.get._1 shouldBe 200
+    csResult.get._2 \ "result" shouldBe JString("CREATE STREAM")
+
+    val umStmt = """UPDATE MODEL test USING update_row FROM ds2"""
+    val umResult = sendJubaQL(umStmt)
+    umResult shouldBe a[Success[_]]
+
+    val spResult = sendJubaQL("START PROCESSING ds1")
+    spResult shouldBe a[Success[_]]
+    waitUntilDone("ds1", 6000)
+
+    val aStmt =  """ANALYZE '阿部慎之助ABC' BY MODEL test USING complete_row_from_id"""
+    val aResult = sendJubaQL(aStmt)
+    val aStmt2 =  """ANALYZE '内川聖一ABC' BY MODEL test USING complete_row_from_id"""
+    val aResult2 = sendJubaQL(aStmt2)
+    // shut down
+    val sdResult = sendJubaQL("SHUTDOWN")
+    sdResult shouldBe a[Success[_]]
+
+    // now check the result
+    aResult shouldBe a[Success[_]]
+    if (aResult.get._1 != 200)
+      println(stdout.toString)
+    aResult.get._1 shouldBe 200
+    aResult.get._2 \ "result" \ "num_values" match {
+      case JObject(list) =>
+        val vals = list.collect({
+          case (s, JDouble(j)) => (s, j)
+        }).toMap
+        vals.size shouldBe 18
+      case _ =>
+        fail("there was no 'num_values' key")
+    }
+    aResult2 shouldBe a[Success[_]]
+    if (aResult2.get._1 != 200)
+      println(stdout.toString)
+    aResult2.get._1 shouldBe 200
+    aResult2.get._2 \ "result" \ "num_values" match {
+      case JObject(list) =>
+        val vals = list.collect({
+          case (s, JDouble(j)) => (s, j)
+        }).toMap
+
+        vals.size shouldBe 0
+      case _ =>
+        fail("there was no 'num_values' key")
     }
     // wait until shutdown
     val exitValue = process.exitValue()
